--- a/magento2/redis/session/Dockerfile
+++ b/magento2/redis/session/Dockerfile
@@ -1,3 +1,3 @@
-FROM redis:latest
+FROM redis:7.0.11
 COPY redis.conf /usr/local/etc/redis/redis.conf
 CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
