--- a/magento2/ubuntu/magento247-build/Dockerfile
+++ b/magento2/ubuntu/magento247-build/Dockerfile
@@ -1,10 +1,8 @@
-FROM gaiterjones/phusion1100-apache2-php7-4:27
+FROM gaiterjones/phusion2204-apache2-php8-3:6
 LABEL maintainer="paj@gaiterjones.com"
 LABEL description="Magento 2 PHP-APACHE Service"
 
-ENV MAGENTO_VERSION 2.4.3-p1
-# sha256sum Magento-Open-Source-2.4.3-p1.tar.gz
-ENV MAGENTO_SHA256 e32b565602eddd6b9e2571132b0982718fa6623dc0fa8fd455195ef8f5d5c733
+ENV MAGENTO_VERSION 2.4.7
 
 # dependencies
 RUN requirements="libsodium-dev libonig-dev libzip-dev libpng-dev libcurl3-dev zlib1g-dev libpng-dev libjpeg-turbo8 libjpeg-turbo8-dev libfreetype6 libfreetype6-dev libicu-dev libxslt1-dev msmtp nano git" \
@@ -32,50 +30,28 @@ RUN requirements="libsodium-dev libonig-dev libzip-dev libpng-dev libcurl3-dev z
 # https://xdebug.org/download.php
 # confirm => php -m | grep -i xdebug
 RUN set -x \
-    && pecl install xdebug-2.9.5 \
-    && docker-php-ext-enable xdebug
+   && pecl install xdebug \
+   && docker-php-ext-enable xdebug
 
-# Install memcache extension
+# Install memcache extension for PHP8
 #
 RUN set -x \
     && apt-get update && apt-get install -y --no-install-recommends unzip libssl-dev libpcre3 libpcre3-dev \
     && cd /tmp \
-    && curl -sSL -o php7.zip https://github.com/websupport-sk/pecl-memcache/archive/4.0.5.2.zip \
-    && unzip php7 \
-    && cd pecl-memcache-4.0.5.2 \
+    && curl -sSL -o php8.zip https://github.com/websupport-sk/pecl-memcache/archive/refs/tags/8.2.zip \
+    && unzip php8.zip \
+    && cd pecl-memcache-8.2 \
     && /usr/local/bin/phpize \
     && ./configure --with-php-config=/usr/local/bin/php-config \
     && make \
     && make install \
     && echo "extension=memcache.so" > /usr/local/etc/php/conf.d/ext-memcache.ini \
-    && rm -rf /tmp/pecl-memcache-php7 php7.zip
+    && rm -rf /tmp/pecl-memcache-8.2 php8.zip
 
-# get magento 2 and extract
+# install composer v2.5.7
 #
 RUN set -x \
-	&& mkdir /var/www/dev \
-	&& rm -rf /var/www/html/* \
-	&& mkdir /tmp/magento2 \
-	&& cd /tmp/magento2 \
-	&& curl https://pe.terjon.es/dropbox/Magento-Open-Source-$MAGENTO_VERSION.tar.gz -o $MAGENTO_VERSION.tar.gz \
-	&& echo "$MAGENTO_SHA256 $MAGENTO_VERSION.tar.gz" | sha256sum -c - \
-	&& tar xvf $MAGENTO_VERSION.tar.gz \
-	&& cd .. \
-	&& mv magento2 /var/www/dev/ \
-    && mkdir /var/www/dev/magento2/composer_home
-
-# install composer v2.1.14
-#
-RUN set -x \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.14
-
-# install magerun 2
-#
-RUN set -x \
-	&& cd /tmp \
-	&& curl -s -o n98-magerun2.phar https://files.magerun.net/n98-magerun2.phar \
-	&& chmod +x ./n98-magerun2.phar \
-	&& mv ./n98-magerun2.phar /usr/local/bin/
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.5.7
 
 # prepare Mage source
 #
@@ -85,7 +61,7 @@ RUN set -x \
 # add new file owner group 1000
 # file owner member of www-data
 #
-COPY ./healthcheck.php /var/www/dev/magento2/
+
 COPY ./auth.json /var/www/.composer/
 # Magento repo auth config
 #
@@ -97,15 +73,32 @@ RUN set -x \
 	&& cat /var/www/.composer/auth.json
 ENV COMPOSER_HOME=/var/www/.composer
 RUN set -x \
+    && mkdir /var/www/dev \
+    && rm -rf /var/www/html/* \
+    && mkdir /var/www/dev/magento2 \
     && usermod -u 33 www-data \
     && adduser --disabled-password --gecos '' magento \
     && usermod -u 1000 magento \
     && usermod -a -G www-data magento \
     && chown -R magento:www-data /var/www
 
-# composer
+# composer create new magento2 project
+#
 RUN chsh -s /bin/bash magento \
-    && su magento -c "cd /var/www/dev/magento2 && composer install"
+    && su magento -c "cd /var/www/dev/magento2 && composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition=$MAGENTO_VERSION /var/www/dev/magento2 && mkdir /var/www/dev/magento2/composer_home"
+COPY ./healthcheck.php /var/www/dev/magento2/
+
+# reset permissions
+#
+RUN chown -R magento:www-data /var/www/dev/magento2/
+
+# install magerun 2
+#
+RUN set -x \
+	&& cd /tmp \
+	&& curl -s -o n98-magerun2.phar https://files.magerun.net/n98-magerun2.phar \
+	&& chmod +x ./n98-magerun2.phar \
+	&& mv ./n98-magerun2.phar /usr/local/bin/
 
 # php RedisAdmin
 # https://github.com/erikdubbelboer/phpRedisAdmin
