--- a/magento2/consumer/Dockerfile
+++ b/magento2/consumer/Dockerfile
@@ -1,71 +1,83 @@
+# Stage 1: Build PHP extensions and dependencies
+FROM php:8.3-cli-alpine AS builder
+
+# Install build dependencies
+RUN apk --update --no-cache add \
+    linux-headers \
+    freetype-dev \
+    libjpeg-turbo-dev \
+    icu-dev \
+    libxslt-dev \
+    libzip-dev \
+    g++ \
+    curl-dev \
+    oniguruma-dev \
+    libpng-dev \
+    libxml2-dev \
+    zlib-dev
+
+# Configure and build PHP extensions
+RUN docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/include/ \
+    && docker-php-ext-install \
+        bcmath \
+        gd \
+        intl \
+        pdo_mysql \
+        soap \
+        sockets \
+        xsl \
+        zip
+
+# Stage 2: Create the final image with minimal footprint
 FROM php:8.3-cli-alpine
-LABEL maintainer magento@gaiterjones.com
-# https://github.com/jetrails/docker-magento-alpine/blob/master/src/php-cli-7.4/Dockerfile
+LABEL maintainer paj@gaiterjones.com
 
+# Copy compiled extensions from builder stage
+COPY --from=builder /usr/local/lib/php/extensions/ /usr/local/lib/php/extensions/
+COPY --from=builder /usr/local/etc/php/conf.d/ /usr/local/etc/php/conf.d/
+
+# Install runtime dependencies only
+# Note: shadow is needed for user/group operations
 RUN apk --update --no-cache add \
-	curl \
-	tree \
-	vim \
-	bash \
-	jq
+    linux-headers \
+    curl \
+    bash \
+    shadow \
+    msmtp \
+    # Runtime libraries needed by extensions
+    freetype \
+    libjpeg-turbo \
+    icu \
+	jq \
+    libxslt \
+    libzip \
+    libpng \
+    libxml2
 
-RUN apk --update --no-cache add \
-	freetype-dev \
-	libjpeg-turbo-dev \
-	icu-dev \
-	libxslt-dev \
-	libzip-dev
+# Configure users and groups
+RUN groupmod -g 33 www-data \
+    && adduser -D -g "" magento \
+    && usermod -u 1000 magento \
+    && usermod -a -G www-data magento
 
-RUN apk --update --no-cache --virtual build-deps add \
-	g++ \
-	shadow \
-	curl-dev \
-	oniguruma-dev \
-	libpng-dev \
-	libxml2-dev \
-	zlib-dev
+# Copy configuration files
+COPY ./conf/php.ini /usr/local/etc/php/php.ini
+COPY ./conf/aliases.sh /etc/profile.d/aliases.sh
+COPY start_consumer.sh /usr/local/start_consumer.sh
 
-RUN docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/include/
-
-RUN docker-php-ext-install \
-	bcmath \
-	gd \
-	intl \
-	pdo_mysql \
-	soap \
-	sockets \
-	xsl \
-	zip
-
-# ensure www-data matches production group id
-RUN groupmod -g 36 xfs
-RUN groupmod -g 33 www-data
-# add new file owner group 1000
-RUN adduser -D -g "" magento
-RUN usermod -u 1000 magento
-#RUN usermod -u 33 www-data
-# file owner member of www-data
-RUN usermod -a -G www-data magento
-
-# msmtprc smtp config
-#
-RUN apk --update --no-cache add \
-	msmtp
+# Configure email
 COPY ./conf/msmtprc /etc/msmtprc
 ARG APPDOMAIN
 ARG SMTP
 RUN set -x \
-	&& sed -i "s/XMAILHOSTX/$SMTP/g" /etc/msmtprc \
-	&& sed -i "s/XMAILDOMAINX/$APPDOMAIN/g" /etc/msmtprc \
-	&& chmod 0644 /etc/msmtprc \
-	&& chown magento /etc/msmtprc \
-	&& touch /var/log/msmtp.log \
-	&& chmod 777 /var/log/msmtp.log
+    && sed -i "s/XMAILHOSTX/$SMTP/g" /etc/msmtprc \
+    && sed -i "s/XMAILDOMAINX/$APPDOMAIN/g" /etc/msmtprc \
+    && chmod 0644 /etc/msmtprc \
+    && chown paj /etc/msmtprc \
+    && touch /var/log/msmtp.log \
+    && chmod 777 /var/log/msmtp.log
 
-#RUN cat /etc/group
-COPY ./conf/php.ini /usr/local/etc/php/php.ini
-COPY ./conf/aliases.sh /etc/profile.d/aliases.sh
-COPY start_consumer.sh /usr/local/start_consumer.sh
+# Switch to non-root user
 USER magento
 WORKDIR /var/www/dev/magento2
 ENTRYPOINT [ "sh", "-l" ]
